# licensecc

./: .clang-format  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  README.md  package.json  requirements.txt
.github/workflows/: cloudflare-customer-portal.yml  cloudflare-d1-backup.yml  cloudflare-license-admin.yml  cloudflare-licensing-backend.yml  cloudflare-online-verifier.yml  lease-platform.yml  lint.yml  linux.yml  release-gates.yml  release-readiness.yml  windows.yml
.tmp/: admin-hardening-review-prompt.md  claude-admin-ops-review.md  claude-cpp-online-review.md  claude-worker-review.md
benchmark/: CMakeLists.txt  benchmark_identify_pc.cpp
cmake/: CheckReleaseProject.cmake  Findlccgen.cmake  LeaseRing.cmake  LicenseccCPackOptions.cmake.in  PrintReleaseManifestSummary.cmake  ReadReleaseManifest.cmake  ScanReleaseArtifact.cmake  ScanSourceArtifact.cmake  ValidateLicenseccIdentity.cmake  WriteReleaseManifest.cmake
doc/: Doxyfile  conf.py  index.rst
doc/analysis/: Development-And-Usage-Workflow.md  db-backends.md  features.rst  license-admin-vite-react-execution-checklist.rst  license-admin-vite-react-plan.rst  online-verification-implementation-checklist.rst  release-artifacts.rst  remaining-gap-closure-checklist.rst  repository-dx-expansibility-implementation-plan.md  security-model.rst  security-notes.rst
doc/api/: extend.rst  hardware_identifiers.rst  public_api.rst
doc/development/: Build-the-library-windows.rst  Build-the-library.md  Dependencies.md
doc/usage/: Hardware-identifiers.rst  License-retrieval.md  cloudflare-backups.rst  concepts.rst  config-attestation.rst  integration.rst  issue-licenses.md  migration-guide.rst
docs/: db-backends.md  generator-crypto-hardening-fixes.md  testing-coverage-map.md
docs/superpowers/: README.md
docs/superpowers/features/: signed-config-token-status.md
docs/superpowers/plans/: 2026-06-10-anti-tamper-telemetry-and-host-examples.md  (+18 more)
example/: CMakeLists.txt  README.md  main.cpp
examples/anti_tamper_host/: CMakeLists.txt  README.md  main.cpp
examples/fail_closed_host/: CMakeLists.txt  README.md  main.cpp
examples/minimal/: CMakeLists.txt  README.md  main.cpp
examples/online_callback/: CMakeLists.txt  README.md  main.cpp  main_winhttp.cpp  online_callback_common.hpp
examples/production_decision_host/: CMakeLists.txt  README.md  main.cpp
include/licensecc/: datatypes.h  licensecc.h
patches/: license-generator-cstdint.patch
scripts/: assert_release_ready.mjs  assert_release_ready.test.mjs  build_docs.py  build_lease_ring.py  check_docs_links.py  dev-check.ps1  external_gate_preflight.mjs  external_gate_preflight.test.mjs  release_gate_contract.mjs  release_gate_contract.test.mjs  release_gates_workflow.test.mjs  secret_hygiene_scan.mjs  secret_hygiene_scan.test.mjs  validate_release_gates.mjs  validate_release_gates.test.mjs  workspace_hygiene_check.mjs  workspace_hygiene_check.test.mjs
sdks/dotnet/: Licensecc.Client.sln  README.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/licensecc/: __init__.py  _b64.py  _signed_token.py  config_attestation.py  http_client.py  keys.py  online_assertion.py  results.py
sdks/python/tests/: conftest.py  test_config_attestation.py  test_http_client.py  test_keys.py  test_online_assertion.py
services/cloudflare-customer-portal/: index.html  package-lock.json  package.json  playwright.config.mjs  tsconfig.json  tsconfig.worker.json  wrangler.example.jsonc  wrangler.toml
services/cloudflare-d1-backup/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.example.jsonc
services/cloudflare-license-admin/: README.md  index.html  package-lock.json  package.json  playwright.config.mjs  tsconfig.worker.json  wrangler.example.jsonc
services/cloudflare-licensing-backend/: README.md  host-common.mjs  host-common.test.mjs  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.example.toml
services/cloudflare-online-verifier/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.example.toml
src/: CMakeLists.txt
src/cmake/: licensecc-config.cmake
src/inspector/: CMakeLists.txt  inspector.cpp  inspector_section.hpp
src/templates/: licensecc_properties.h.in  licensecc_properties_test.h.in  public_key.inja
test/: CMakeLists.txt  artifact_scan_smoke.cmake  ctest_label_audit.cmake  install_consumer_smoke.cmake  lccinspector_redaction_blackbox.cmake  lccinspector_short_section.cmake  manifest_summary_smoke.cmake  package_consumer_smoke.cmake  release_manifest_assertions.cmake  release_safety_smoke.cmake  source_package_smoke.cmake  tools_profile_smoke.cmake
test/functional/: CMakeLists.txt  activation_it_test.cpp  crack_test.cpp  date_test.cpp  generate-license.cpp  hw_identifier_it_test.cpp  lease_ring_test.cpp  signature_verifier_test.cpp  standard-license_test.cpp
test/fuzz/: CMakeLists.txt  GenerateLicenseReaderCorpus.cmake  fuzz_base64.cpp  fuzz_hw_identifier.cpp  fuzz_license_reader.cpp  fuzz_v201_canonical_payload.cpp
test/fuzz/corpus/base64/: bad_padding.txt  line_wrapped.txt  valid.txt
test/fuzz/corpus/hw_identifier/: canonical_disk.txt  control_flags.txt  malformed.txt
test/fuzz/corpus/license_reader/: malformed_v201.lic  non_ini.txt  valid_shape_v200.lic
test/fuzz/corpus/v201_canonical_payload/: duplicate_required.txt  full_optional.txt  unknown_key.txt
test/vectors/config_attestation/: _gen_embedded_golden.mjs  _gen_golden.mjs  embedded_golden.config  embedded_golden.key_id  embedded_golden.token  embedded_golden_public_key_record.cmake.txt  golden.config  golden.key_id  golden.public_key.pkcs1.der.hex  golden.token
test/vectors/lease_ring/: README.md
test/vectors/online_assertion/: golden.assertion  golden.key_id  golden.payload  golden.public_key.pkcs1.der.hex
test/vectors/v201/: full.license  full.payload.hex  full.signature.b64  minimal.expected-result  minimal.license  minimal.payload.hex  minimal.signature.b64  public_key.id  public_key.pkcs1.der.hex
(+210 files in other folders)
