#if we're here boost has been found
add_definitions(-DBOOST_ALL_NO_LIB) #Disable Boost Microsoft magic, all dependencies are handled by cmake

configure_file (
	"${CMAKE_CURRENT_SOURCE_DIR}/../src/templates/licensecc_properties_test.h.in" 
	"${CMAKE_BINARY_DIR}/licensecc_properties_test.h.tmp"
)
file(GENERATE OUTPUT "${CMAKE_BINARY_DIR}/include/$<CONFIG>/licensecc_properties_test.h" 
		INPUT "${CMAKE_BINARY_DIR}/licensecc_properties_test.h.tmp")
include_directories ( ${CMAKE_BINARY_DIR}/include/$<CONFIG> )

add_test(NAME test_install_consumer_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/Testing/install-consumer/$<CONFIG>/prefix
		-DLICENSECC_CONSUMER_BUILD_DIR=${CMAKE_BINARY_DIR}/Testing/install-consumer/$<CONFIG>/consumer
		-DLICENSECC_PROJECT_NAME=${LCC_PROJECT_NAME}
		-DLICENSECC_PROJECTS_BASE_DIR=${LCC_PROJECTS_BASE_DIR}
		-DLICENSECC_PROJECT_MAGIC_NUM=${LCC_PROJECT_MAGIC_NUM}
		-DLICENSECC_PACKAGE_ABI_TAG=${LCC_PACKAGE_ABI_TAG}
		-DLICENSECC_CONFIG=$<CONFIG>
		-DLICENSECC_GENERATOR=${CMAKE_GENERATOR}
		-DLICENSECC_GENERATOR_PLATFORM=${CMAKE_GENERATOR_PLATFORM}
		-DLICENSECC_GENERATOR_TOOLSET=${CMAKE_GENERATOR_TOOLSET}
		-P ${CMAKE_CURRENT_SOURCE_DIR}/install_consumer_smoke.cmake
)
set_tests_properties(test_install_consumer_smoke PROPERTIES LABELS "security;install;public_api;validation")

add_test(NAME test_package_consumer_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_PACKAGE_ROOT=${CMAKE_BINARY_DIR}/Testing/package-consumer/$<CONFIG>
		-DLICENSECC_PROJECT_NAME=${LCC_PROJECT_NAME}
		-DLICENSECC_PROJECTS_BASE_DIR=${LCC_PROJECTS_BASE_DIR}
		-DLICENSECC_PROJECT_MAGIC_NUM=${LCC_PROJECT_MAGIC_NUM}
		-DLICENSECC_PACKAGE_ABI_TAG=${LCC_PACKAGE_ABI_TAG}
		-DLICENSECC_CONFIG=$<CONFIG>
		-DLICENSECC_GENERATOR=${CMAKE_GENERATOR}
		-DLICENSECC_GENERATOR_PLATFORM=${CMAKE_GENERATOR_PLATFORM}
		-DLICENSECC_GENERATOR_TOOLSET=${CMAKE_GENERATOR_TOOLSET}
		-DLICENSECC_CPACK_COMMAND=${CMAKE_CPACK_COMMAND}
		-P ${CMAKE_CURRENT_SOURCE_DIR}/package_consumer_smoke.cmake
)
set_tests_properties(test_package_consumer_smoke PROPERTIES LABELS "security;install;package;public_api;validation")

add_test(NAME test_release_safety_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_CONFIG=$<CONFIG>
		-DLICENSECC_GENERATOR=${CMAKE_GENERATOR}
		-DLICENSECC_GENERATOR_PLATFORM=${CMAKE_GENERATOR_PLATFORM}
		-DLICENSECC_GENERATOR_TOOLSET=${CMAKE_GENERATOR_TOOLSET}
		-DLICENSECC_BOOST_ROOT=${BOOST_ROOT}
		-DLICENSECC_CPACK_COMMAND=${CMAKE_CPACK_COMMAND}
		-P ${CMAKE_CURRENT_SOURCE_DIR}/release_safety_smoke.cmake
)
set_tests_properties(test_release_safety_smoke PROPERTIES LABELS "security;validation;generator")

add_test(NAME test_artifact_scan_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_CONFIG=$<CONFIG>
		-P ${CMAKE_CURRENT_SOURCE_DIR}/artifact_scan_smoke.cmake
)
set_tests_properties(test_artifact_scan_smoke PROPERTIES LABELS "security;validation;package")

add_test(NAME test_tools_profile_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_CONFIG=$<CONFIG>
		-DLICENSECC_GENERATOR=${CMAKE_GENERATOR}
		-DLICENSECC_GENERATOR_PLATFORM=${CMAKE_GENERATOR_PLATFORM}
		-DLICENSECC_GENERATOR_TOOLSET=${CMAKE_GENERATOR_TOOLSET}
		-DLICENSECC_BOOST_ROOT=${BOOST_ROOT}
		-DLICENSECC_CPACK_COMMAND=${CMAKE_CPACK_COMMAND}
		-P ${CMAKE_CURRENT_SOURCE_DIR}/tools_profile_smoke.cmake
)
set_tests_properties(test_tools_profile_smoke PROPERTIES LABELS "security;validation;package")

add_test(NAME test_source_package_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_CPACK_COMMAND=${CMAKE_CPACK_COMMAND}
		-P ${CMAKE_CURRENT_SOURCE_DIR}/source_package_smoke.cmake
)
set_tests_properties(test_source_package_smoke PROPERTIES LABELS "security;validation;package")

add_test(NAME test_manifest_summary_smoke
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_SOURCE_DIR=${CMAKE_SOURCE_DIR}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-P ${CMAKE_CURRENT_SOURCE_DIR}/manifest_summary_smoke.cmake
)
set_tests_properties(test_manifest_summary_smoke PROPERTIES LABELS "security;validation;package")

if(NOT DEFINED MINGW)
	set(LCC_HAS_DMI_TEST TRUE)
else()
	set(LCC_HAS_DMI_TEST FALSE)
endif()

add_test(NAME test_ctest_label_audit
	COMMAND ${CMAKE_COMMAND}
		-DLICENSECC_CTEST_COMMAND=${CMAKE_CTEST_COMMAND}
		-DLICENSECC_BUILD_DIR=${CMAKE_BINARY_DIR}
		-DLICENSECC_CONFIG=$<CONFIG>
		-DLICENSECC_IS_WINDOWS=$<BOOL:${WIN32}>
		-DLICENSECC_HAS_DMI_TEST=${LCC_HAS_DMI_TEST}
		-DLICENSECC_BUILD_FUZZERS=$<BOOL:${BUILD_FUZZERS}>
		-DLICENSECC_BUILD_INSPECTOR=$<BOOL:${LCC_BUILD_INSPECTOR}>
		-P ${CMAKE_CURRENT_SOURCE_DIR}/ctest_label_audit.cmake
)
set_tests_properties(test_ctest_label_audit PROPERTIES LABELS "security;validation")

add_subdirectory(library)
add_subdirectory(functional)
if(BUILD_FUZZERS)
	add_subdirectory(fuzz)
endif()
