cmake_minimum_required(VERSION 3.16)
project(licensecc_production_decision_host_example CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT TARGET licensecc::licensecc_static)
  find_package(licensecc REQUIRED COMPONENTS ${LCC_PROJECT_NAME})
endif()
find_package(CURL QUIET)
find_package(OpenSSL COMPONENTS Crypto QUIET)

function(lcc_configure_production_decision_host target_name)
  target_include_directories(${target_name} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../online_callback")
  if(OpenSSL_FOUND)
    target_compile_definitions(${target_name} PRIVATE LCC_PRODUCTION_DECISION_HOST_USE_OPENSSL_REQUEST_PROOF=1)
    target_link_libraries(${target_name} PRIVATE OpenSSL::Crypto)
  elseif(WIN32)
    target_compile_definitions(${target_name} PRIVATE LCC_PRODUCTION_DECISION_HOST_USE_WINDOWS_REQUEST_PROOF=1)
    target_link_libraries(${target_name} PRIVATE bcrypt crypt32 ncrypt)
  endif()
endfunction()

if(CURL_FOUND)
  add_executable(production_decision_host main.cpp)
  target_compile_definitions(production_decision_host PRIVATE LCC_PRODUCTION_DECISION_HOST_USE_CURL=1)
  target_link_libraries(production_decision_host PRIVATE licensecc::licensecc_static CURL::libcurl)
  lcc_configure_production_decision_host(production_decision_host)
elseif(WIN32)
  add_executable(production_decision_host main.cpp)
  target_compile_definitions(production_decision_host PRIVATE LCC_PRODUCTION_DECISION_HOST_USE_WINHTTP=1)
  target_link_libraries(production_decision_host PRIVATE licensecc::licensecc_static winhttp)
  lcc_configure_production_decision_host(production_decision_host)
else()
  message(STATUS "libcurl not found and no native HTTP backend is available; skipping production_decision_host example")
endif()
