ADD_LIBRARY(license_generator_snippet STATIC
 	generate-license.cpp
)

target_link_libraries( license_generator_snippet
 	 Boost::unit_test_framework 
     Boost::filesystem
     Boost::system
)

add_executable( test_standard_license
 standard-license_test.cpp
)

target_link_libraries( test_standard_license
 licensecc_static
 license_generator_snippet
 Boost::unit_test_framework 
 Boost::filesystem
 Boost::system
)

add_executable( test_date
 date_test.cpp
)

target_link_libraries( test_date
 licensecc_static
 license_generator_snippet
 Boost::unit_test_framework 
 Boost::filesystem
 Boost::system
)

add_executable( test_signature_verifier
 signature_verifier_test.cpp
)

target_link_libraries(
 test_signature_verifier
 licensecc_static
 license_generator_lib
 license_generator_snippet
 Boost::unit_test_framework 
 Boost::filesystem
 Boost::system
)


add_executable(test_it_hw_identifier hw_identifier_it_test.cpp)

target_link_libraries(test_it_hw_identifier
 license_generator_snippet
 licensecc_static
 Boost::unit_test_framework 
 Boost::filesystem
 Boost::system
)

add_executable(test_crack crack_test.cpp)

target_link_libraries( test_crack
 license_generator_snippet
 licensecc_static
 Boost::unit_test_framework 
 Boost::filesystem
 Boost::system
)

ADD_TEST(NAME test_crack COMMAND test_crack WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
ADD_TEST(NAME test_date COMMAND test_date WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
ADD_TEST(NAME test_it_hw_identifier COMMAND test_it_hw_identifier WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
ADD_TEST(NAME test_standard_license COMMAND test_standard_license WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
ADD_TEST(NAME test_signature_verifier COMMAND test_signature_verifier WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

set_tests_properties(test_crack PROPERTIES LABELS "security;parser;signature;public_api")
set_tests_properties(test_date PROPERTIES LABELS "security;parser;verifier")
set_tests_properties(test_it_hw_identifier PROPERTIES LABELS "security;hardware;generator")
set_tests_properties(test_standard_license PROPERTIES LABELS "security;signature;generator")
set_tests_properties(test_signature_verifier PROPERTIES LABELS "security;signature")

# Lease platform: 2-key hot/cold ring golden test. Built only when the build baked a
# real additional (hot) ring record via LCC_BUILD_LEASE_RING_TEST (see cmake/LeaseRing.cmake).
if(LCC_BUILD_LEASE_RING_TEST)
	add_executable(test_lease_ring lease_ring_test.cpp)
	target_link_libraries( test_lease_ring
	 licensecc_static
	 license_generator_lib
	 license_generator_snippet
	 Boost::unit_test_framework
	 Boost::filesystem
	 Boost::system)
	# The ephemeral hot key (path + id) generated by lcc_generate_test_lease_ring().
	target_compile_definitions(test_lease_ring PRIVATE
	 "LCC_LEASE_TEST_HOT_KEY_ID=\"${LCC_LEASE_TEST_HOT_KEY_ID}\""
	 "LCC_LEASE_TEST_HOT_KEY_PATH=\"${LCC_LEASE_TEST_HOT_KEY_PATH}\"")
	ADD_TEST(NAME test_lease_ring COMMAND test_lease_ring WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
	set_tests_properties(test_lease_ring PROPERTIES LABELS "security;signature;verifier;public_api")
endif()
